--- a/Lissajous.ipynb
+++ b/Lissajous.ipynb
@@ -15,13 +15,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a3ff26948e849f79d1d371fa2db7225",
+       "model_id": "3e03068884c74c458b4ce3c72c88c19c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -41,7 +41,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "interactive(children=(IntSlider(value=2, description='multiplier', max=3, min=1), FloatSlider(value=0.015, description='offset', max=0.03, step=0.001), FloatSlider(value=1.57, description='starter', max=3.142, step=0.002), FloatSlider(value=0.5, description='circle_size', max=1.0, step=0.01), FloatSlider(value=0.0, description='circle_speed', max=0.25, min=-0.25, step=0.002), FloatSlider(value=1.57, description='circle_start', max=3.142, step=0.002), Output()), _dom_classes=('widget-interact',))"
+       "interactive(children=(IntSlider(value=2, description='multiplier', max=3, min=1), FloatSlider(value=0.015, description='offset', max=0.03, step=0.001), FloatSlider(value=1.57, description='starter', max=3.142, step=0.002), FloatSlider(value=0.5, description='circle_size', max=1.0, step=0.01), FloatSlider(value=1.0, description='circle_speed', max=3.0, step=1.0), FloatSlider(value=0.0, description='circle_offset', max=0.05, min=-0.05, step=0.001), FloatSlider(value=1.57, description='circle_start', max=3.142, step=0.002), Output()), _dom_classes=('widget-interact',))"
       ]
      },
      "metadata": {},
@@ -56,22 +56,20 @@
     "from ipywidgets import interact\n",
     "\n",
     "\n",
-    "@interact(multiplier=(1, 3), offset=(0.0, 0.03, 0.001), starter=(0.0, 3.142, 0.002), circle_size=(0.0, 1.0, 0.01), circle_speed=(-0.25, 0.25, 0.002), circle_start=(0.0, 3.142, 0.002))\n",
-    "def harmonograph(multiplier, offset, starter, circle_size, circle_speed, circle_start):\n",
-    "    scene = Scene('test', 800, 800)\n",
+    "@interact(multiplier=(1, 3), offset=(0.0, 0.03, 0.001), starter=(0.0, 3.142, 0.002), circle_size=(0.0, 1.0, 0.01), circle_speed=(0.0, 3.0, 1.0), circle_offset=(-0.05, 0.05, 0.001), circle_start=(0.0, 3.142, 0.002))\n",
+    "def harmonograph(multiplier, offset, starter, circle_size, circle_speed, circle_offset, circle_start):\n",
     "    pos = 0\n",
     "    spd = 0.05\n",
     "    decay = 6000\n",
-    "    facter = multiplier + offset\n",
-    "    prevx = 400\n",
-    "    prevy = 400\n",
+    "    factor = multiplier + offset\n",
+    "    circle_factor = circle_speed + circle_offset\n",
     "    min_x = max_x = min_y = max_y = prev_x = prev_y = 400\n",
     "    points = []\n",
     "    for pos in range(decay//10, decay):\n",
     "        adjx = int(400 + int(200 * (pos/float(decay)) * math.sin(pos * spd)))\n",
-    "        adjy = int(400 + int(200 * (pos/float(decay)) * math.sin(starter + (pos * spd * facter))))\n",
-    "        adjx += int(circle_size * 200 * (pos/float(decay)) * math.sin(circle_start + (pos * spd * circle_speed)))\n",
-    "        adjy += int(circle_size * 200 * (pos/float(decay)) * math.cos(circle_start + (pos * spd * circle_speed)))\n",
+    "        adjy = int(400 + int(200 * (pos/float(decay)) * math.sin(starter + (pos * spd * factor))))\n",
+    "        adjx += int(circle_size * 200 * (pos/float(decay)) * math.sin(circle_start + (pos * spd * circle_factor)))\n",
+    "        adjy += int(circle_size * 200 * (pos/float(decay)) * math.cos(circle_start + (pos * spd * circle_factor)))\n",
     "        points.append([adjx, adjy])\n",
     "        min_x = min(min_x, adjx)\n",
     "        min_y = min(min_y, adjy)\n",
@@ -79,25 +77,21 @@
     "        max_y = max(max_y, adjy)\n",
     "\n",
     "    scale = min(800.0/(max_x - min_x), 800.0/(max_y - min_y))\n",
-    "    x_offset = (max_x + min_x)/2 - 400\n",
-    "    y_offset = (max_y + min_y)/2 - 400\n",
+    "    x_offset = ((max_x + min_x)/2 - 400)*70/400\n",
+    "    y_offset = ((max_y + min_y)/2 - 400)*70/400\n",
     "\n",
+    "    ser = serial.Serial('/dev/ttyACM0', 9600)\n",
+    "    tosend = f'{factor} {starter} {circle_size} {circle_factor} {circle_start} {x_offset} {y_offset} {scale:.4f}'\n",
+    "    print(tosend)\n",
+    "    ser.write(tosend.encode('utf-8'))\n",
+    "\n",
+    "    scene = Scene('test', 800, 800)\n",
     "    for point in points:\n",
     "        point_x = scale*(point[0] - min_x)\n",
     "        point_y = scale*(point[1] - min_y)\n",
-    "        scene.add(Line((prevx, prevy), (point_x, point_y)))\n",
-    "        prevx = point_x\n",
-    "        prevy = point_y\n",
+    "        scene.add(Line((prev_x, prev_y), (point_x, point_y)))\n",
+    "        prev_x, prev_y = point_x, point_y\n",
     "\n",
-    "    # rework min_x, min_y and scale to workable numbers\n",
-    "    min_x = min_x*70/400\n",
-    "    min_y = min_y*70/400\n",
-    "\n",
-    "    ser = serial.Serial('/dev/ttyACM0', 9600)\n",
-    "    # tosend = f'{facter} {starter} {circle_size} {circle_speed} {circle_start} {min_x} {min_y} {scale:.4f}\\r'\n",
-    "    tosend = f'{facter}\\n{starter}\\n{circle_size}\\n{circle_speed}\\n{circle_start}\\n{min_x}\\n{min_y}\\n{scale:.4f}\\n'\n",
-    "    print(tosend)\n",
-    "    ser.write(tosend.encode('utf-8'))\n",
     "    return SVG(\"\\n\".join(scene.strarray()))\n"
    ]
   },
@@ -153,13 +147,6 @@
     "\n",
     "l"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
